force-app/main/default/objects/ssot__ConvChannelEngagementSummary__dlm/fields/ssot__ChannelEngagementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChannelEngagementId__c</fullName>
    <label>Channel Engagement Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChannelEngagementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>