force-app/main/default/objects/ssot__ConvChannelEngagementSummary__dlm/fields/ssot__MeetingNotes__c.field-meta.xml
<CustomField>
    <fullName>ssot__MeetingNotes__c</fullName>
    <label>Meeting Notes</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MeetingNotes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>