force-app/main/default/objects/ssot__ConvChannelEngagementSummary__dlm/fields/ssot__NextSteps__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextSteps__c</fullName>
    <label>Next Steps</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NextSteps</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>