force-app/main/default/objects/ssot__ConvChannelEngagementSummary__dlm/fields/ssot__rel_1731039795255_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039795255_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConvChannelEngagementSummary_Partner_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ConvChannelEngagementSummary_Partner_rel</relationshipLabel>
    <relationshipName>rel_1731039795255_end</relationshipName>
    <type>Lookup</type>
</CustomField>