force-app/main/default/objects/ssot__ConvChannelEngagementSummary__dlm/fields/ssot__rel_1731039813656_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039813656_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConvChannelEngagementSummary_Related_rel</label>
    <referenceTo>ssot__BenefitAssignmentAdjustment__dlm</referenceTo>
    <relationshipLabel>ConvChannelEngagementSummary_Related_rel</relationshipLabel>
    <relationshipName>rel_1731039813656_end</relationshipName>
    <type>Lookup</type>
</CustomField>